[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/station/StationMenu.gd" type="Script" id=1]
[ext_resource path="res://themes/Pixelar.tres" type="Theme" id=2]

[node name="StationMenu" type="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 217.0
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 217.0
margin_bottom = 166.0

[node name="HeaderLabel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 217.0
margin_bottom = 16.0

[node name="--- Welcome to" type="Label" parent="HBoxContainer/VBoxContainer/HeaderLabel"]
margin_right = 18.0
margin_bottom = 16.0
text = "---"

[node name="StationName" type="Label" parent="HBoxContainer/VBoxContainer/HeaderLabel"]
margin_left = 22.0
margin_right = 59.0
margin_bottom = 16.0
text = "$NAME"

[node name="---" type="Label" parent="HBoxContainer/VBoxContainer/HeaderLabel"]
margin_left = 63.0
margin_right = 81.0
margin_bottom = 16.0
text = "---"

[node name="DescLabel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 217.0
margin_bottom = 36.0

[node name="StationDesc" type="Label" parent="HBoxContainer/VBoxContainer/DescLabel"]
margin_right = 80.0
margin_bottom = 16.0
text = "$DESCRIPTION"

[node name="Spacer" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 217.0
margin_bottom = 56.0

[node name="ContentHolder" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 217.0
margin_bottom = 60.0

[node name="Spacer2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 217.0
margin_bottom = 80.0

[node name="Spacer3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 217.0
margin_bottom = 100.0

[node name="NewDestinationReminder" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 217.0
margin_bottom = 120.0
text = "Press 'n' to select a new destination."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer4" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 217.0
margin_bottom = 140.0

[node name="DepartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 200.0
margin_bottom = 166.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Depart"
